--- a/portfolio.html
+++ b/portfolio.html
@@ -73,11 +73,18 @@
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <a class="link portfolio-link" href="#">
-                <img
-                  src="./images/portfolio/laptop.jpg"
-                  alt="ноутбук"
-                  width="370"
-                />
+                <div class="portfilio-discription">
+                  <img
+                    src="./images/portfolio/laptop.jpg"
+                    alt="ноутбук"
+                    width="370"
+                  />
+                  <p class="img-discription">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -86,12 +93,18 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="#">
-                <img
-                  src="./images/portfolio/two-players.jpg"
-                  alt="два гравці грають в баскетбол"
-                  width="370"
-                />
-
+                <div class="portfilio-discription">
+                  <img
+                    src="./images/portfolio/two-players.jpg"
+                    alt="два гравці грають в баскетбол"
+                    width="370"
+                  />
+                  <p class="img-discription">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">
                     Постер New Orlean vs Golden Star
@@ -102,11 +115,18 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="#">
-                <img
-                  src="./images/portfolio/seafood.jpg"
-                  alt="додаток 'seafood'"
-                  width="370"
-                />
+                <div class="portfilio-discription">
+                  <img
+                    src="./images/portfolio/seafood.jpg"
+                    alt="додаток 'seafood'"
+                    width="370"
+                  />
+                  <p class="img-discription">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -115,11 +135,18 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="#">
-                <img
-                  src="./images/portfolio/headphone.jpg"
-                  alt="навушники"
-                  width="370"
-                />
+                <div class="portfilio-discription">
+                  <img
+                    src="./images/portfolio/headphone.jpg"
+                    alt="навушники"
+                    width="370"
+                  />
+                  <p class="img-discription">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Проект Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -128,11 +155,18 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="#">
-                <img
-                  src="./images/portfolio/boxes.jpg"
-                  alt="додаток 'boxes'"
-                  width="370"
-                />
+                <div class="portfilio-discription">
+                  <img
+                    src="./images/portfolio/boxes.jpg"
+                    alt="додаток 'boxes'"
+                    width="370"
+                  />
+                  <p class="img-discription">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Проект Boxes</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -141,11 +175,18 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="#">
-                <img
-                  src="./images/portfolio/inspiration.jpg"
-                  alt="монітор з відкритим Веб-сайтом"
-                  width="370"
-                />
+                <div class="portfilio-discription">
+                  <img
+                    src="./images/portfolio/inspiration.jpg"
+                    alt="монітор з відкритим Веб-сайтом"
+                    width="370"
+                  />
+                  <p class="img-discription">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -154,11 +195,18 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="#">
-                <img
-                  src="./images/portfolio/limiteded.jpg"
-                  alt="Книжка"
-                  width="370"
-                />
+                <div class="portfilio-discription">
+                  <img
+                    src="./images/portfolio/limiteded.jpg"
+                    alt="Книжка"
+                    width="370"
+                  />
+                  <p class="img-discription">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Видання Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -167,11 +215,18 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="#">
-                <img
-                  src="./images/portfolio/lab.jpg"
-                  alt="бірка з написом лаб"
-                  width="370"
-                />
+                <div class="portfilio-discription">
+                  <img
+                    src="./images/portfolio/lab.jpg"
+                    alt="бірка з написом лаб"
+                    width="370"
+                  />
+                  <p class="img-discription">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Проєкт LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -180,11 +235,18 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="#">
-                <img
-                  src="./images/portfolio/growingb.jpg"
-                  alt="руки на клавіатурі"
-                  width="370"
-                />
+                <div class="portfilio-discription">
+                  <img
+                    src="./images/portfolio/growingb.jpg"
+                    alt="руки на клавіатурі"
+                    width="370"
+                  />
+                  <p class="img-discription">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-text">Додаток</p>
